# statespacecheck

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  analyze_sim.py  index.html  mkdocs.yml  objects.inv  paper.md  pyproject.toml  sim.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml
contributing/: index.html
docs/javascripts/: mathjax.js
docs/tutorials/: 01_introduction.ipynb  02_highest_density_regions.ipynb  03_time_resolved_diagnostics.ipynb  04_predictive_checks.ipynb
examples/: 01_introduction.ipynb  02_highest_density_regions.ipynb  03_time_resolved_diagnostics.ipynb  04_predictive_checks.ipynb
gen_ref_pages/: index.html
reference/SUMMARY/: index.html
reference/statespacecheck/highest_density/: index.html
reference/statespacecheck/periods/: index.html
reference/statespacecheck/predictive_checks/: index.html
reference/statespacecheck/state_consistency/: index.html
reference/statespacecheck/viz/: index.html
scripts/: analyze_sim.py  figure1.py  figure_2.py  sim.py
search/: search_index.json
src/statespacecheck/: __init__.py  _validation.py  highest_density.py  highest_posterior_density.py  periods.py  predictive_checks.py  state_consistency.py
tests/: conftest.py  test_aggregate.py  test_highest_density.py  test_highest_posterior_density.py  test_periods.py  test_predictive_consistency.py  test_predictive_pvalue.py  test_state_consistency.py  test_validation.py
tutorials/: index.html
tutorials/01_introduction/: index.html
tutorials/02_highest_density_regions/: 02_highest_density_regions.ipynb  index.html
tutorials/03_time_resolved_diagnostics/: 03_time_resolved_diagnostics.ipynb  index.html
tutorials/04_predictive_checks/: index.html
